Added test for requirement F-01d